--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,6 @@
     <string name="welcome">Gnod is a self-adapting system that learns about the outer world by asking its visitors what they like and what they don\'t like. In this instance of Gnod all is about music. Gnod is kind of a search engine for music you don\'t know about. It will ask you what music you like and then think about what you might like too. When I set Gnod online its database was completely empty. Now it contains hundreds of thousands of bands and quite some knowledge about who likes what. And Gnod learns more every day. Enjoy!</string>
     <string name="start">continue</string>
     <string name="history">history</string>
+    <string name="teach_gnod">To teach Gnod what you are like, please type in 3 bands that you already know and like.</string>
+    <string name="one_of_my_fav_band">One of my favorite bands is...</string>
 </resources>
