--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="teach_gnod">To teach Gnod what you are like, please type in 3 bands that you already know and like.</string>
     <string name="one_of_my_fav_band">One of my favorite bands is...</string>
     <string name="continue_button_text">continue</string>
+    <string name="saved_artists">Saved Artists</string>
 </resources>
