add theme (does not work)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,24 @@
     <string name="i_like_it">I like it</string>
     <string name="i_don_t_like_it">I don\'t like it</string>
     <string name="i_don_t_know">I don\'t know</string>
+    <string name="title_activity_settings">Settings</string>
+
+    <!-- Preference Titles -->
+    <string name="messages_header">Messages</string>
+    <string name="sync_header">Sync</string>
+
+    <!-- Messages Preferences -->
+    <string name="signature_title">Your signature</string>
+    <string name="reply_title">Default reply action</string>
+
+    <!-- Sync Preferences -->
+    <string name="sync_title">Sync email periodically</string>
+    <string name="attachment_title">Download incoming attachments</string>
+    <string name="attachment_summary_on">Automatically download attachments for incoming emails
+    </string>
+    <string name="attachment_summary_off">Only download attachments when manually requested</string>
+    <string name="keep_saved_artists">Conserver les artistes likés dans la mémoire?</string>
+    <string name="clear_history">clear history?</string>
+    <string name="delete_all_artists">This will delete all like artists</string>
+    <string name="theme">Theme</string>
 </resources>
